# mathx

./: .gitignore  MCP_PLAN.md  README.md  pyproject.toml
.claude/skills/maths-oracle/: SKILL.md
examples/: qwen_agent_tool.py
skills/maths-oracle/: SKILL.md
src/mathx/: __init__.py  cli.py  engine.py
